--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,26 +1,26 @@
 [uwsgi]
 # Socket and pid file location/permission.
-uwsgi-socket = /home/abc/web/tmp/dmoj-site.sock
+uwsgi-socket = /home/aaa/site/tmp/dmoj-site.sock
 chmod-socket = 666
-pidfile = /home/abc/web/tmp/dmoj-site.pid
+pidfile = /home/aaa/site/tmp/dmoj-site.pid
 
-# You should create an account dedicated to running dmoj under uwsgi.
-uid = abc
-gid = abc
+# Bạn nên chạy uwsgi bằng tài khoản riêng cho dmoj, ở đây là user "aaa".
+uid = aaa
+gid = aaa
 
 # Paths.
-chdir = /home/abc/web/OJ
-pythonpath = /home/abc/web/OJ
-virtualenv = /home/abc/web/vnojsite
+chdir = /home/aaa/site
+pythonpath = /home/aaa/site
+virtualenv = /home/aaa/vnojsite
 
-# Details regarding DMOJ application.
+# DMOJ app settings.
 protocol = uwsgi
 master = true
 env = DJANGO_SETTINGS_MODULE=dmoj.settings
 module = dmoj.wsgi:application
 optimize = 2
 
-# Scaling settings. Tune as you like.
+# Scaling.
 memory-report = true
 cheaper-algo = backlog
 cheaper = 3
