--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen       80;
+    listen       192.168.1.9:80;
     listen       [::]:80;
 
     # Change port to 443 and do the nginx ssl stuff if you want it.
@@ -7,7 +7,7 @@ server {
     # Change server name to the HTTP hostname you are using.
     # You may also make this the default server by listening with default_server,
     # if you disable the default nginx server declared.
-    server_name localhost;
+    server_name 192.168.1.9;
 
     add_header X-UA-Compatible "IE=Edge,chrome=1";
     add_header X-Content-Type-Options nosniff;
