config: example config

--- a/celery.conf
+++ b/celery.conf
@@ -1,8 +1,8 @@
 [program:celery]
-command=/home/aaa/vnojsite/bin/celery -A dmoj_celery worker
-directory=/home/aaa/site
+command=/home/admin123/web/vnojsite/bin/celery -A dmoj_celery worker
+directory=/home/admin123/web/OJ
 # You should create a dedicated user for celery to run under.
-user=aaa
-group=aaa
-stdout_logfile=/home/aaa/site/tmp/celery.stdout.log
-stderr_logfile=/home/aaa/site/tmp/celery.stderr.log
+user=admin123
+group=admin123
+stdout_logfile=/home/admin123/web/OJ/tmp/celery.stdout.log
+stderr_logfile=/home/admin123/web/OJ/tmp/celery.stderr.log
