--- a/site.conf
+++ b/site.conf
@@ -1,6 +1,6 @@
 [program:site]
-command=/home/aaa/vnojsite/bin/uwsgi --ini /home/aaa/site/uwsgi.ini
-directory=/home/aaa/site
+command=/home/admin123/web/vnojsite/bin/uwsgi --ini uwsgi.ini
+directory=/home/admin123/web/OJ
 stopsignal=QUIT
-stdout_logfile=/home/aaa/site/tmp/site.stdout.log
-stderr_logfile=/home/aaa/site/tmp/site.stderr.log
+stdout_logfile=/home/admin123/web/OJ/tmp/site.stdout.log
+stderr_logfile=/home/admin123/web/OJ/tmp/site.stderr.log
