--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,17 +1,18 @@
 [uwsgi]
 # Socket and pid file location/permission.
-uwsgi-socket = /home/aaa/site/tmp/dmoj-site.sock
-chmod-socket = 666
-pidfile = /home/aaa/site/tmp/dmoj-site.pid
 
+uwsgi-socket = /home/admin123/web/OJ/tmp/dmoj-site.sock
+chmod-socket = 666
+pidfile = /home/admin123/web/OJ/tmp/dmoj-site.pid
 # Bạn nên chạy uwsgi bằng tài khoản riêng cho dmoj, ở đây là user "aaa".
-uid = aaa
-gid = aaa
+uid = admin123
+gid = admin123
 
 # Paths.
-chdir = /home/aaa/site
-pythonpath = /home/aaa/site
-virtualenv = /home/aaa/vnojsite
+chdir = /home/admin123/web/OJ
+pythonpath = /home/admin123/web/OJ
+virtualenv = /home/admin123/web/vnojsite
+home = /home/admin123/web/vnojsite
 
 # DMOJ app settings.
 protocol = uwsgi
@@ -29,3 +30,5 @@ cheaper-step = 1
 cheaper-rss-limit-soft = 201326592
 cheaper-rss-limit-hard = 234881024
 workers = 7
+
+env = DJANGO_SETTINGS_MODULE=dmoj.settings
