--- a/wsevent.conf
+++ b/wsevent.conf
@@ -1,8 +1,8 @@
 [program:wsevent]
-command=/usr/bin/node /home/aaa/site/websocket/daemon.js
-environment=NODE_PATH="/home/aaa/site/node_modules"
+command=/usr/bin/node /home/admin123/web/OJ/websocket/daemon.js
+environment=PATH="/usr/bin:/bin"
 # Should create a dedicated user.
-user=aaa
-group=aaa
-stdout_logfile=/home/aaa/site/tmp/wsevent.stdout.log
-stderr_logfile=/home/aaa/site/tmp/wsevent.stderr.log
+user=admin123
+group=admin123
+stderr_logfile=/home/admin123/web/OJ/tmp/ws-daemon.err.log
+stdout_logfile=/home/admin123/web/OJ/tmp/ws-daemon.out.log
