--- a/bridged.conf
+++ b/bridged.conf
@@ -1,8 +1,8 @@
 [program:bridged]
-command=/home/aaa/vnojsite/bin/python manage.py runbridged
-directory=/home/aaa/site
+command=/home/admin123/web/vnojsite/bin/python manage.py runbridged
+directory=/home/admin123/web/OJ
 stopsignal=INT
-user=aaa
-group=aaa
-stdout_logfile=/home/aaa/site/tmp/bridge.stdout.log
-stderr_logfile=/home/aaa/site/tmp/bridge.stderr.log
+user=admin123
+group=admin123
+stdout_logfile=/home/admin123/web/OJ/tmp/bridge.stdout.log
+stderr_logfile=/home/admin123/web/OJ/tmp/bridge.stderr.log
