--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen       192.168.1.8:80;
+    listen       172.26.147.11:80;
     listen       [::]:80;
 
     # Change port to 443 and do the nginx ssl stuff if you want it.
@@ -7,7 +7,7 @@ server {
     # Change server name to the HTTP hostname you are using.
     # You may also make this the default server by listening with default_server,
     # if you disable the default nginx server declared.
-    server_name 192.168.1.8;
+    server_name 172.26.147.11;
 
     add_header X-UA-Compatible "IE=Edge,chrome=1";
     add_header X-Content-Type-Options nosniff;
@@ -18,11 +18,11 @@ server {
     error_page 502 504 /502.html;
 
     location ~ ^/502\.html$|^/logo\.png$|^/robots\.txt$ {
-        root /home/aaa/site;
+        root /home/admin123/web/OJ;
     }
 
     location @icons {
-        root /home/aaa/site/resources/icons;
+        root /home/admin123/web/OJ/resources/icons;
         error_page 403 = @uwsgi;
         error_page 404 = @uwsgi;
     }
@@ -30,7 +30,7 @@ server {
     location @uwsgi {
         uwsgi_read_timeout 600;
         # Change this path if you did so in uwsgi.ini
-        uwsgi_pass unix:///home/aaa/site/tmp/dmoj-site.sock;
+        uwsgi_pass unix:///home/admin123/web/OJ/tmp/dmoj-site.sock;
         include uwsgi_params;
         uwsgi_param SERVER_SOFTWARE nginx/$nginx_version;
     }
@@ -40,23 +40,23 @@ server {
         expires max;
         #root <django setting STATIC_ROOT, without the final /static>;
         # Comment out root, and use the following if it doesn't end in /static.
-        alias /home/aaa/site/static_collected/;
+        alias /home/admin123/web/OJ/static/;
     }
 
     location /martor {
-        root /home/aaa/site/media;
+        root /home/admin123/web/OJ/media;
     }
 
     location /pdf {
-        root /home/aaa/site/media;
+        root /home/admin123/web/OJ/media;
     }
 
     location /submission_file {
-        root /home/aaa/site/media;
+        root /home/admin123/web/OJ/media;
     }
 
     # location /profile_images/ {
-    #     root /home/aaa/site;
+    #     root /home/admin123/web/OJ;
     # }
 
     # Uncomment if you are using PDFs and want to serve it faster.
@@ -66,7 +66,7 @@ server {
     #    root <the value of DMOJ_PDF_PROBLEM_CACHE in local_settings.py>;
     #
     #    # Default from local_settings.py:
-        root /home/aaa/site/dmoj/;
+        root /home/admin123/web/OJ/dmoj/;
     }
 
     # Uncomment if you are allowing user data downloads and want to serve it faster.
@@ -76,7 +76,7 @@ server {
     #    root <path to data cache directory, without the final /userdatacache>;
     #
     #    # Default from local_settings.py:
-        root /home/aaa/site/dmoj/;
+        root /home/admin123/web/OJ/dmoj/;
     }
 
     # Uncomment if you are allowing contest data downloads and want to serve it faster.
@@ -86,7 +86,7 @@ server {
     #    root <path to data cache directory, without the final /contestdatacache>;
     #
     #    # Default from local_settings.py:
-        root /home/aaa/site/dmoj/;
+        root /home/admin123/web/OJ/dmoj/;
     }
 
     # Uncomment these sections if you are using the event server.
